--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         .logo img {
             width: 80px;
             height: auto;
+            border: 10px;
         }
 
         .title {
