--- a/index.html
+++ b/index.html
@@ -4,63 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BudgetBuddy</title>
-    <style>
-        body {
-            font-family: "Brush Script", cursive;
-            margin: 0;
-            padding: 0;
-            display: grid;
-            grid-template-rows: auto 1fr;
-            height: 100vh;
-        }
-
-        /* Header Styling */
-        .header {
-            display: grid;
-            grid-template-columns: 100px 1fr 300px 150px;
-            align-items: center;
-            background-color: #00f2ff;
-            color: rgb(255, 255, 255);
-            padding: 15px;
-            gap: 20px;
-        }
-
-        .logo img {
-            width: 80px;
-            height: auto;
-            border: 10px;
-        }
-
-        .title {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .search-bar input {
-            width: 100%;
-            padding: 8px;
-            border-radius: 5px;
-            border: none;
-        }
-
-        .sign-in {
-            text-align: right;
-        }
-
-        .sign-in a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 8px 15px;
-            border: 2px solid white;
-            border-radius: 5px;
-        }
-
-        .sign-in a:hover {
-            background-color: white;
-            color: #2c3e50;
-        }
-    </style>
+   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
