--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <div class="logo">
             <img src="logo.png" alt="BudgetBuddy Logo"> <!-- Replace with actual logo -->
         </div>
-        <div class="title">budgetbuddyy</div>
+        <div class="title-container">
+            <div class="title">BudgetBuddy</div>
+            <div class="slogan">Track Expenses, Save Smart, Live Stress-Free!</div>
+        </div>
         <div class="search-bar">
             <input type="text" placeholder="Search...">
         </div>
@@ -20,6 +23,6 @@
             <a href="#">Sign In</a>
         </div>
     </header>
-    <h1>Welcome to budget buddy</h1>
+    
 </body>
 </html>
