--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
             <div class="title">BudgetBuddy</div>
             <div class="slogan">Track Expenses, Save Smart, Live Stress-Free!</div>
         </div>
+        <nav class="menu">
+            <ul>
+                <li class="dropdown">
+                    <a href="#">Home ▼</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Expense Tracker</a></li>
+                        <li><a href="#">Budget Planner</a></li>
+                        <li><a href="#">Bill Reminders</a></li>
+                        <li><a href="#">Savings</a></li>
+                        <li><a href="#">About the Website</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
         <div class="search-bar">
             <input type="text" placeholder="Search...">
         </div>
