--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
     <header class="header">
         <div class="logo">
-            <img src="logo.png" alt="BudgetBuddy Logo"> <!-- Replace with actual logo -->
+            <img src="logo.png" alt="BudgetBuddy Logo"> 
         </div>
-        <div class="title">budgetbuddyy</div>
+        <div class="title-container">
+             <div class="title">budgetbuddyy</div>
+             <div class="slogan">Track Expenses, Save Smart, Live Stress-Free!</div>
+        </div>
         <div class="search-bar">
             <input type="text" placeholder="Search...">
         </div>
@@ -20,6 +23,5 @@
             <a href="#">Sign In</a>
         </div>
     </header>
-    <h1>Welcome to budget buddy</h1>
 </body>
 </html>
