--- a/signin.html
+++ b/signin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BudgetBuddy - Sign In</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="signin-style.css">
 </head>
 <body>
 
