--- a/piggy.html
+++ b/piggy.html
@@ -14,7 +14,7 @@
         }
 
         .header {
-            background-color: #3498db;
+            background-color: #c7347d;
             padding: 10px;
             color: white;
             text-align: center;
