--- a/temp.html
+++ b/temp.html
@@ -48,12 +48,7 @@
                     <li><a href="billreminder.html">Bill Reminders</a></li>
                     <li><a href="student.html">student Reminders</a></li>
                     <li><a href="piggy.html">Savings</a></li>
-                    <li class="dropdown">
-                        <a href="about.html">About ▼</a>
-                       <!-- <ul class="dropdown-menu" style="display: none;">
-                            <li><a href="#">BudgetBuddy is a personal finance management tool designed to help you track your expenses, plan budgets, set bill reminders, and save money efficiently. Our goal is to make financial management easy and stress-free for everyone.</a></li>
-                        </ul>-->
-                    </li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </li>
         </ul>
