--- a/about.html
+++ b/about.html
@@ -5,7 +5,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About the Website - BudgetBuddy</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: white; /* White background */
+            color: #333; /* Dark text color for contrast */
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: center; /* Center the items horizontally */
+            background-color: #0ac756; /* Light grey background for header */
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+
+        header .logo img {
+            height: 50px;
+            margin-right: 20px; /* Add some space between logo and text */
+        }
+
+        header .title-container {
+            text-align: center; /* Center the title and slogan */
+        }
+
+        header .title {
+            font-size: 1.8em;
+            font-weight: bold;
+            color: #333;
+        }
+
+        header .slogan {
+            font-size: 1em;
+            color: #777;
+        }
+
+        .content {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fafafa; /* Light background for content */
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .content h2 {
+            font-size: 2em;
+            color: #333;
+            margin-bottom: 15px;
+        }
+
+        .content h3 {
+            font-size: 1.5em;
+            color: #555;
+            margin-top: 20px;
+        }
+
+        .content p {
+            font-size: 1.1em;
+            margin-bottom: 15px;
+        }
+
+        .content ul {
+            list-style-type: none;
+            padding-left: 20px;
+        }
+
+        .content ul li {
+            font-size: 1.1em;
+            margin-bottom: 10px;
+        }
+
+        footer {
+            text-align: center;
+            font-size: 0.9em;
+            color: #777;
+            margin-top: 40px;
+            padding: 10px 0;
+            background-color: #f8f8f8; /* Light grey footer background */
+            border-radius: 5px;
+        }
+
+        footer p {
+            margin: 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -51,5 +146,3 @@
     </footer>
 
 </body>
-
-</html>
