--- a/yearlybud.html
+++ b/yearlybud.html
@@ -5,14 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yearly Planner - BudgetBuddy</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
-        /* Styling for Yearly Planner Page */
+        /* General body styling */
+        body {
+            background-color: white; /* White background for the entire page */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Header styling */
+        .header {
+            background-color: #4CAF50; /* Green background for the header */
+            color: white;
+            display: flex;
+            align-items: center;
+            padding: 20px;
+            justify-content: space-between;
+        }
+
+        .logo img {
+            height: 40px;
+        }
+
+        .title-container {
+            text-align: center;
+            flex-grow: 1;
+        }
+
+        .title {
+            font-size: 1.8em;
+            font-weight: bold;
+        }
+
+        .slogan {
+            font-size: 1em;
+            font-style: italic;
+        }
+
+        /* Main content styling */
         .content {
             margin: 20px;
             text-align: center;
         }
 
+        /* Form container */
         .form-container {
             margin: 20px;
         }
@@ -23,6 +60,8 @@
             margin: 5px;
             font-size: 16px;
             width: 150px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
         }
 
         .form-container button {
@@ -32,24 +71,30 @@
             color: white;
             border: none;
             cursor: pointer;
+            border-radius: 5px;
         }
 
         .form-container button:hover {
             background-color: #45a049;
         }
 
+        /* Chart container */
         .chart-container {
             width: 100%;
             max-width: 900px;
             margin: 0 auto;
         }
 
+        /* Category summary styling */
         .category-summary {
             font-size: 18px;
             font-weight: bold;
             margin-top: 20px;
+            text-align: left;
+            padding-left: 30px;
         }
 
+        /* ProTip Section */
         .yearly-plan {
             text-align: center;
             margin-top: 40px;
@@ -66,6 +111,10 @@
             margin-top: 20px;
             border-radius: 5px;
             font-size: 16px;
+            text-align: left;
+            width: 60%;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
 </head>
